[package]
name = "farmfe_plugin_resolve"
version = "0.0.16"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Resolve plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_resolve"

[dependencies]
farmfe_core = { path = "../core", version = "0.7.3" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.17" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.17" }
farmfe_utils = { path = "../utils", version = "0.1.6" }
once_cell = "1.19.0"

[features]
profile = ["farmfe_core/profile"]
