[package]
name = "farmfe_plugin_runtime"
version = "0.0.7"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Runtime plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_runtime"

[dependencies]
farmfe_core = { path = "../core", version = "0.6.0" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.9" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.9" }
farmfe_utils = { path = "../utils", version = "0.1.4" }
rkyv = { version = "0.7.42" }

[features]
profile = ["farmfe_core/profile"]
