[package]
name = "farmfe_plugin_runtime"
version = "2.0.1"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Runtime plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_runtime"

[dependencies]
farmfe_core = { path = "../core", version = "3.0.0" }
farmfe_toolkit = { path = "../toolkit", version = "2.0.1" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "2.0.1" }
farmfe_utils = { path = "../utils", version = "2.0.0" }
enhanced-magic-string = { workspace = true }
sourcemap = { workspace = true }
rkyv = { workspace = true }

[features]
profile = ["farmfe_core/profile"]
