[package]
name = "farmfe_plugin_script"
version = "0.0.12"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Script compilation plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_script"

[dependencies]
farmfe_core = { path = "../core", version = "0.7.1" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.15" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.15" }
farmfe_utils = { path = "../utils", version = "0.1.6" }
farmfe_swc_transformer_import_glob = { path = "../swc_transformer_import_glob", version = "0.0.13" }
swc_plugin_proxy = { version = "3.0.0", features = [
  "plugin-rt",
], optional = true }
swc_plugin_runner = { version = "3.0.0", features = [
  "ecma",
  "rkyv-impl",
  "plugin_transform_schema_v1",
  "plugin_transform_host_native",
], optional = true }
swc_ecma_loader = { version = "3.0.0", features = [
  "cache",
  "node",
  "tsc",
], optional = true }
once_cell = { version = "1.10.0", optional = true }
tokio = { features = [
  "rt",
  "rt-multi-thread",
], version = "1", default-features = false, optional = true }


[features]
swc_plugin = [
  "dep:swc_plugin_proxy",
  "dep:swc_plugin_runner",
  "dep:swc_ecma_loader",
  "dep:once_cell",
  "dep:tokio",
]
