[package]
name = "farmfe_plugin_script"
version = "2.0.1"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Script compilation plugin of farm."
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_script"

[dependencies]
farmfe_core = { path = "../core", version = "3.0.0" }
farmfe_toolkit = { path = "../toolkit", version = "2.0.1" }
farmfe_utils = { path = "../utils", version = "2.0.0" }
farmfe_swc_transformer_import_glob = { path = "../swc_transformer_import_glob", version = "2.0.1" }
swc_plugin_proxy = { version = "14.0.0", features = [
  "plugin-rt",
], optional = true }
swc_plugin_runner = { version = "18.0.0", features = [
  "ecma",
  "rkyv-impl",
  "plugin_transform_schema_v1",
], optional = true }
swc_plugin_backend_wasmer = { version = "1.0.0", features = [
  "plugin_transform_host_native",
], optional = true }
swc_ecma_loader = { version = "14.0.0", features = [
  "cache",
  "node",
  "tsc",
], optional = true }
once_cell = { version = "1.10.0", optional = true }
tokio = { features = [
  "rt",
  "rt-multi-thread",
], version = "1", default-features = false, optional = true }

[dev-dependencies]
farmfe_testing_helpers = { path = "../testing_helpers", version = "2.0.1" }
farmfe_plugin_script_meta = { path = "../plugin_script_meta", version = "2.0.1" }

[features]
swc_plugin = [
  "dep:swc_plugin_proxy",
  "dep:swc_plugin_runner",
  "dep:swc_ecma_loader",
  "dep:once_cell",
  "dep:tokio",
  "dep:swc_plugin_backend_wasmer",
]
