[package]
name = "farmfe_plugin_script_meta"
version = "0.0.1"
edition = "2021"
authors = ["brightwu(吴明亮) <1521488775@qq.com>"]
license = "MIT"
description = "Farm rust plugin for updating module meta data for script modules"
homepage = "https://farmfe.org"
repository = "https://github.com/farm-fe/farm"
documentation = "https://docs.rs/farmfe_plugin_script_meta"

[dependencies]
farmfe_core = { path = "../core", version = "0.8.0" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.18" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.18" }
farmfe_utils = { path = "../utils", version = "0.1.7" }
