[package]
name = "farmfe_plugin_static_assets"
version = "0.0.1"
edition = "2021"

[dependencies]
farmfe_core = { path = "../core", version = "0.3.0" }
farmfe_toolkit = { path = "../toolkit", version = "0.0.1" }
farmfe_testing_helpers = { path = "../testing_helpers", version = "0.0.1" }
farmfe_utils = { path = "../utils", version = "0.1.2" }
base64 = "0.21.0"
rkyv = { version = "0.7.42" }
mime_guess = "2.0.4"
